data/derived/sp14/progs/unify/prog0261.ml.out
Characters 72-147:
  | h::t -> sqsum (( mulByDigit i (List.rev (List.map (fun x->x*10) t )) ) @ h*i :: []);;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
